use c & pd mem funcs for yoga

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
 set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 11)
 
 set(ENVSDK $ENV{PLAYDATE_SDK_PATH})
 
@@ -27,10 +26,11 @@ set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 set(PLAYDATE_GAME_NAME uiLibrary)
 set(PLAYDATE_GAME_DEVICE uiLibrary_DEVICE)
 
-project(${PLAYDATE_GAME_NAME} C CXX ASM)
+project(${PLAYDATE_GAME_NAME} C ASM)
 
-set(YOGA_LIB src/yoga/Yoga.cpp src/yoga/YGEnums.cpp src/yoga/YGValue.cpp src/yoga/YGStyle.cpp src/yoga/YGNodePrint.cpp src/yoga/YGNode.cpp src/yoga/YGLayout.cpp src/yoga/YGConfig.cpp src/yoga/Utils.cpp src/yoga/log.cpp src/yoga/internal/experiments.cpp src/yoga/event/event.cpp)
-set(UI_LIB src/main.c src/yoga_bindings.cpp ${YOGA_LIB})
+set(YOGA_LIB src/yoga_bindings.c src/yoga/Yoga.c src/yoga/YGNodeList.c)
+set(UI_LIB src/main.c ${YOGA_LIB})
+
 if (TOOLCHAIN STREQUAL "armgcc")
 	add_executable(${PLAYDATE_GAME_DEVICE} ${SDK}/C_API/buildsupport/setup.c ${UI_LIB})
 else()
